--- a/style.css
+++ b/style.css
@@ -1,11 +1,30 @@
-container {
-    margin-top: 200px ;
-    margin-bottom: 200px;
-    margin-right: 550px;
-    margin-left: auto;
-    padding: 30px 50px;
-    position: absolute;
-    width: 500px;
-    border: 3px solid whitesmoke;
-    padding: 10px;
+
+input[type=text], input[type=tel], input[type=email], input[type=password]{
+    border: solid rgb(83, 31, 182);
+}
+input[type=submit]{
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: auto;
+    text-decoration: none;
+    margin: auto;
+    cursor: pointer;
+}
+input[type=text]:focus, [type=email]:focus, [type=tel]:focus,
+[type=password]:focus {
+    background-color: lightblue;
+    border: solid #555;
+}
+btn-facebook {
+    background-color: rgba(46, 26, 230, 0.952);
+    color: ;
+}
+btn-google {
+    background-color: rgb(114, 236, 66);
+    color: rgb(182, 88, 88);
+}
+.nav-link:hover{
+    border-top: solid green;
+    border-bottom: solid green;
 }
