--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,7 +10,7 @@ body{
     font-size: 90%;
 }
 .login-container{
-	margin-top: 110px;
+	margin-top: 150px;
     margin-bottom: 100px;
     position: absolute;
     top: 50%;
@@ -43,6 +43,7 @@ body{
 }
 .login-container .login-title span strong{
    color:#f0ad4e;
+   margin: auto;
 }
 .login-container .login-body{
     padding: 30px 30px;
@@ -68,7 +69,7 @@ body{
     display: inline-block;
     height: 2px;
     width: 0;
-    background: #f0ad4e;
+    background: #6c4ef0;
     -o-transition:width .3s;
     -webkit-transition:width .3s;
     transition: width .3s;
@@ -89,7 +90,7 @@ body{
     width: 100%;
 }
 .login-container .login-body select.form-control:select{
-    background: pink;
+    background: rgb(192, 255, 195);
 }
 .login-container .login-body input.form-control + i{
     position: absolute;
