--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@
     margin: 2px 2px 2px;
 }
 
-.form-group input[type=text], input[type=number]{
+.form-group input[type=text], input[type=number], input[type=email],input[type=password]{
     outline: none;
-    padding: 5px 5px;
+    padding: 10px 5px;
     box-shadow: none !important;
     border-style: none none solid;
     border-bottom-color: green;
