--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .form-group{
     border-style: none;
     box-shadow: none;
-    padding: 10px;
+    padding: 15px 10px 15px;
     margin: 2px 2px 2px;
 }
 
