--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+.car{
+    color: #000000;
+    font-weight: bold;
+    font-size: 20px;
+}
 .form-container{
     width: 100%;
     margin: 50px auto 50px;
