media screen and max-width

--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ p{
     color: #0a0a0a;
     font-weight: bold;
     font-size: 30px;
+    margin: auto;
+}
+@media screen and (max-width: 500px) {
+  p {
+    color: #0a0a0a;
+    font-weight: bold;
+    font-size: 10px;
+    margin: auto;
+  }
 }
 .form-container{
     width: 100%;
@@ -65,4 +74,7 @@ p{
     outline: none;
     box-shadow: none;
     border: .5px solid #34eb49;
+}
+.fas{
+    font-size: 20px;
 }
