--- a/style.css
+++ b/style.css
@@ -39,7 +39,19 @@
     padding: 30px 10px 0px;
     margin: auto;
 }
-
+.select-cat{
+    outline: none;
+    box-shadow: none !important;
+    border-style: none none solid;
+    border-bottom-color: green;
+    border-style: none none solid;
+    border-bottom-color: tan;
+}
+.form-group select:focus{
+    outline: none;
+    box-shadow: none;
+    border: .5px solid #34eb49;
+}
 .form-group input[type=text], input[type=number], input[type=email],input[type=password]{
     outline: none;
     padding: 10px 5px;
